--- a/coindox/public/assets/css/main.css
+++ b/coindox/public/assets/css/main.css
@@ -7329,3 +7329,8 @@ blockquote {
   border-top: 1px solid #1A1F2E; }
 
 /*# sourceMappingURL=main.css.map */
+
+header__logo {
+  max-width: 100px;
+  max-height: 100px;
+}
